# fluidos-modelbased-metaorchestrator

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cluster-config.yaml  consumer-config.yaml  example-mbmo-config-map.yaml  provider-config.yaml  requirements-dev.txt  setup-testbed.sh  setup.cfg  stefano.txt  tox.ini
.github/workflows/: codeql.yml  deployment-hub.yml  deployment.yml  testing.yml
.github/worklfows/: testing.yml
Archive/: cluster-config.yaml  consumer-config.yaml  provider-config.yaml  setup-testbed.sh
deployment/fluidos-meta-orchestrator/: Chart.yaml  values.yaml
fluidos_model_orchestrator/: .dockerignore  __init__.py  common.py  configuration.py  container.py  deployment.py  flavor.py  healthz.py  metaorchestrator.py  rob.py  rob_finder.py  rob_model.py  start_and_stop.py
fluidos_model_orchestrator/common/: __init__.py  contract.py  flavor.py  intent.py  model.py  prometheus.py  resource.py
fluidos_model_orchestrator/daemons_and_times/: __init__.py  contract_checker.py  flavor.py  fluidos_deployment.py  fluidosdeployment.py
fluidos_model_orchestrator/data_pipeline/: data_util.py
fluidos_model_orchestrator/model/: .dockerignore  __init__.py  common.py  dummy.py  ensemble.py  orchestrator.py  orchestrator_factory.py  rob.py  utils.py
fluidos_model_orchestrator/model_pipeline/: model_trainer.py  model_trainer_factory.py  model_util.py  run_telefonica.ipynb
fluidos_model_orchestrator/rescheduler/: __init__.py
fluidos_model_orchestrator/resources/: __init__.py
notebooks/: run_telefonica.ipynb
samples/: configmap.yaml
tests/: conftest.py  test_candidate_generation.py  test_candidate_generation_model.py  test_carbon_aware.py  test_common.py  test_configuration.py  test_configuration_enrichment.py  test_conversion.py  test_deployment.py  test_deployment_utils.py  test_docker_retrieval.py  test_flavor.py  test_intent.py  test_intent_satisfaction.py  test_liqo.py  test_model_selection.py  test_mspl.py  test_orchestration_model.py  test_prometheus.py  test_rear_integration.py  test_rear_remote_resourceprovider.py  test_rear_resource_finder.py  test_resource_matcher.py  test_resource_provider_serialization.py  test_rlice.py  test_secret.py
tests/data/: example-mbmo-config-map.yaml  multi-cluster-deployment.yaml
tests/examples/: bandwidth-patch-file.yaml  carbon-bad-patch-file.yaml  carbon-good-patch-file.yaml  credentials-secret.yaml  deployment-single-pod.yaml  offload-namespace-fluidos.yaml  tee-patch-file.yaml  test-deployment.yaml  test-intent-mspl.yaml  test-pod-w-intent-IE-service.yaml  test-pod-w-intent-IE.yaml  test-pod-w-intent-throughput-bandwidth.yaml  test-pod-w-intent-throughput.yaml  test-pod-w-intent.yaml  test-pod-w-intent2.yaml  test-pod.yaml  test-solver.yaml
utils/: cleanup-installation.sh  cleanup-solvers.sh  cluster-multi-worker.yaml  fluidos-deployment-crd.yaml  fluidos-deployment.yaml  fluidos-modebased-operator-deployment.yaml  fluidos-node-values.yaml  functions.sh  setup-demo.sh  setup-liqo.sh  setup-rear.sh  teardown.sh
(+106 files in other folders)
