[metadata]
name = fluidos-model-orchestrator
version = 0.0.1

author = 'Stefano Braghin, Liubov Nedoshivina, Killian Levacher'
author_email = 'stefanob@ie.ibm.com; liubov.nedoshivina@ibm.com; killian.levacher@ibm.com'

[options]
py_modules = fluidos_model_orchestrator
python_requires = >=3.10
install_requires =
    kopf==1.37.2
    kubernetes==29.0.0
    PyYAML==6.0.1
    pandas==2.1.1
    numpy==1.26.0
    sentence-transformers==2.2.2
    torch==2.1.0
    tensorflow==2.15.0
    tensorflow-recommenders==0.7.3
    tensorflow-datasets==4.9.3  # for dataset pipeline
    tensorflow_ranking==0.05
    docker==7.0.0


[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = false
disable_error_code = import-untyped

[mypy-tests.*]
disallow_untyped_defs = false

[flake8]
ignore = E265,E501,W504
