[metadata]
name = fluidos-model-orchestrator
version = 0.0.1

author = 'Stefano Braghin, Liubov Nedoshivina, Killian Levacher'
author_email = 'stefanob@ie.ibm.com; liubov.nedoshivina@ibm.com; killian.levacher@ibm.com'

[options]
py_modules = fluidos_model_orchestrator
python_requires = >=3.10
install_requires =
    dm-tree==0.1.8  # for avoiding installation issues on OS X
    docker==7.1.0
    huggingface-hub==0.29.3
    kopf==1.38.0
    kubernetes==32.0.1
    numpy==1.26.0
    pandas==2.2.3
    prometheus-client==0.22.1
    protobuf==6.31.1
    PyYAML==6.0.1
    requests==2.32.4
    safetensors==0.5.3
    sentence-transformers==3.4.1
    tensorflow-datasets==4.9.3  # for dataset pipeline
    tokenizers==0.21.2
    torch==2.6.0

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = false
disable_error_code = import-untyped

[mypy-tests.*]
disallow_untyped_defs = false

[flake8]
ignore = E265,E501,W504
